--- a/ChessUI/ChessUI.csproj
+++ b/ChessUI/ChessUI.csproj
@@ -8,4 +8,42 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Assets\black_bishop.png" />
+    <None Remove="Assets\black_king.png" />
+    <None Remove="Assets\black_knight.png" />
+    <None Remove="Assets\black_pawn.png" />
+    <None Remove="Assets\black_queen.png" />
+    <None Remove="Assets\black_rook.png" />
+    <None Remove="Assets\chess_board.png" />
+    <None Remove="Assets\chess_icon.ico" />
+    <None Remove="Assets\CursorB.cur" />
+    <None Remove="Assets\CursorW.cur" />
+    <None Remove="Assets\white_bishop.png" />
+    <None Remove="Assets\white_king.png" />
+    <None Remove="Assets\white_knight.png" />
+    <None Remove="Assets\white_pawn.png" />
+    <None Remove="Assets\white_queen.png" />
+    <None Remove="Assets\white_rook.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Assets\black_bishop.png" />
+    <Resource Include="Assets\black_king.png" />
+    <Resource Include="Assets\black_knight.png" />
+    <Resource Include="Assets\black_pawn.png" />
+    <Resource Include="Assets\black_queen.png" />
+    <Resource Include="Assets\black_rook.png" />
+    <Resource Include="Assets\chess_board.png" />
+    <Resource Include="Assets\chess_icon.ico" />
+    <Resource Include="Assets\CursorB.cur" />
+    <Resource Include="Assets\CursorW.cur" />
+    <Resource Include="Assets\white_bishop.png" />
+    <Resource Include="Assets\white_king.png" />
+    <Resource Include="Assets\white_knight.png" />
+    <Resource Include="Assets\white_pawn.png" />
+    <Resource Include="Assets\white_queen.png" />
+    <Resource Include="Assets\white_rook.png" />
+  </ItemGroup>
+
 </Project>
