--- a/ChessUI/ChessUI.csproj
+++ b/ChessUI/ChessUI.csproj
@@ -21,6 +21,7 @@
     <None Remove="Assets\CursorW.cur" />
     <None Remove="Assets\grassboard.png" />
     <None Remove="Assets\pixelboard.png" />
+    <None Remove="Assets\plantwall.jpg" />
     <None Remove="Assets\sign.png" />
     <None Remove="Assets\white_bishop.png" />
     <None Remove="Assets\white_king.png" />
@@ -47,6 +48,7 @@
     <Resource Include="Assets\CursorW.cur" />
     <Resource Include="Assets\grassboard.png" />
     <Resource Include="Assets\pixelboard.png" />
+    <Resource Include="Assets\plantwall.jpg" />
     <Resource Include="Assets\sign.png" />
     <Resource Include="Assets\white_bishop.png" />
     <Resource Include="Assets\white_king.png" />
